DoctorServiceImpl Code review changes added